# the-bus-factor

./: .bruin.yml.example  .gitignore  .sqlfluff  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  pages.yml  weekly.yml
analysis/: AGENTS.md  prompts.md
analysis/screenshots/: README.md
docs/: init.md  methodology.md  progress.md  runbook.md  sources.md
launch/: AGENTS.md  bruin-comparison.md  linkedin-post.md  maintainer-response.md  market-positioning.md  slack-post.md  submission-checklist.md
pipeline/: AGENTS.md  __init__.py  pipeline.yml
pipeline/assets_bq/: AGENTS.md
pipeline/config/: scoring.yml
pipeline/fixtures/: analysis_gallery.csv  deps_dev.csv  github_commits.csv  github_contributors.csv  github_issues.csv  github_releases.csv  github_repos.csv  known_states.csv  known_states.md  market_positioning.csv  npm_registry.csv  osv.csv  pypi_registry.csv  scorecard.csv  source_health.csv
public-data/: README.md  analysis.json  coverage.json  leaderboard.json  metadata.json  packages.json  positioning.json  sources.json  weekly.json
reports/: README.md
reviews/: 2026-04-23_pre-release-repo-audit.md  2026-04-23_weekly-bigquery-prod-data-accuracy.md  2026-04-24_live-telemetry-anomaly.md
scripts/: bq_dryrun.py  generate_analysis_screenshots.py  generate_bq_siblings.py  refresh_universe.py  render_capture_png.py  run_bigquery_smoke.py  setup.sh
tests/: test_bigquery_smoke.py  test_config.py  test_http_cache.py  test_live_ingestion.py  test_schemas.py  test_scoring.py  test_smoke.py  test_snapshot.py  test_sources.py  test_sql_parity.py  test_universe.py
web/: AGENTS.md  astro.config.mjs  package.json  tsconfig.json
worklogs/: 2026-04-22_cycle-2-live-ingestion.md  2026-04-23_bigquery-prod-data-accuracy.md  2026-04-23_bigquery-prod-review-fixes.md
(+95 files in other folders)
